--- a/index.html
+++ b/index.html
@@ -28,17 +28,8 @@
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
     </header>
-    <div class="container-lg px-5">
-      <!-- Use class for "past", "present", and "future" to apply styles to the
-        time-block divs accordingly. The javascript will need to do this by
-        adding/removing these classes on each div by comparing the hour in the
-        id to the current hour. The html provided below is meant to be an example
-        demonstrating how the css provided can be leveraged to create the
-        desired layout and colors. The html below should be removed or updated
-        in the finished product. Remember to delete this comment once the
-        code is implemented.
-        -->
-      <div id="hour-9" class="row time-block past">
+    <div id="time-blocks" class="container-lg px-5">
+      <div id="9AM" class="row time-block past">
         <div class="col-2 col-md-1 hour text-center py-3">9AM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -46,7 +37,7 @@
         </button>
       </div>
 
-      <div id="hour-10" class="row time-block past">
+      <div id="10AM" class="row time-block past">
         <div class="col-2 col-md-1 hour text-center py-3">10AM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -54,7 +45,7 @@
         </button>
       </div>
 
-      <div id="hour-11" class="row time-block past">
+      <div id="11AM" class="row time-block past">
         <div class="col-2 col-md-1 hour text-center py-3">11AM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -62,7 +53,7 @@
         </button>
       </div>
 
-      <div id="hour-12" class="row time-block past">
+      <div id="12PM" class="row time-block past">
         <div class="col-2 col-md-1 hour text-center py-3">12PM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -70,7 +61,7 @@
         </button>
       </div>
 
-      <div id="hour-13" class="row time-block past">
+      <div id="13PM" class="row time-block past">
         <div class="col-2 col-md-1 hour text-center py-3">1PM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -78,7 +69,7 @@
         </button>
       </div>
 
-      <div id="hour-14" class="row time-block past">
+      <div id="14PM" class="row time-block past">
         <div class="col-2 col-md-1 hour text-center py-3">2PM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -86,7 +77,7 @@
         </button>
       </div>
 
-      <div id="hour-15" class="row time-block past">
+      <div id="15PM" class="row time-block past">
         <div class="col-2 col-md-1 hour text-center py-3">3PM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -94,7 +85,7 @@
         </button>
       </div>
 
-      <div id="hour-16" class="row time-block past">
+      <div id="16PM" class="row time-block past">
         <div class="col-2 col-md-1 hour text-center py-3">4PM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -102,14 +93,15 @@
         </button>
       </div>
 
-      <div id="hour-17" class="row time-block past">
+      <div id="17PM" class="row time-block past">
         <div class="col-2 col-md-1 hour text-center py-3">5PM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
         </button>
       </div>
-      
+    </div>
+
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
